--- a/Projects/F1/index.html
+++ b/Projects/F1/index.html
@@ -8,7 +8,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>QuadSim</title>
+<title>F1 in Schools</title>
 <link href="index.css" rel="stylesheet" type="text/css">
 <link href="../../../../../../Program Files (x86)/Adobe/Adobe Dreamweaver CS6/Configuration/BuiltIn/Fluid Grid Layout/boilerplate.css" rel="stylesheet" type="text/css">
 <link href="../projects.css" rel="stylesheet" type="text/css">
@@ -33,48 +33,58 @@ Do the following if you're using your customized build of modernizr (http://www.
 <div class="gridContainer clearfix">
   <ul id="MenuBar1" class="MenuBarHorizontal">
     <li>
-		<a class="MenuBarItemSubmenu" href="../../index.html">
+		<a href="../index.html">
 			Home
 		</a>
 	</li>
-    <li><a href="#">Interests</a></li>
-    <li><a class="MenuBarItemSubmenu" href="#">Projects</a>
+    <li><a class="MenuBarItemSubmenu" href="#Interest" >Interests</a>
+		<ul>
+			<li><a href="../Interests/Origami/index.html">
+				Origami
+			</a></li>
+			<li><a href="../Interests/Travelling/index.html">
+				Travelling
+			</a></li>
+			<li><a href="../Interests/Robots/index.html">
+				Robots
+			</a></li>
+			<li><a href="../Interests/Photography/index.html">
+				Photography
+			</a></li>
+			</ul>
+	</li>
+    <li><a class="MenuBarItemSubmenu" href="#Project">Projects</a>
       <ul>
-		<li><a href="../EcoCAR/index.html">
+		<li><a href="../Projects/EcoCAR/index.html">
 			McMaster EcoCar3
 		</a></li>
-		<li><a href="../FormulaHybrid/index.html">
+		<li><a href="../Projects/FormulaHybrid/index.html">
 			McMaster Formula Hybrid
 		</a></li>
-        <li><a href="../Strangers/index.html">
+        <li><a href="../Projects/Strangers/index.html">
 			Strangers App
 		</a></li>	
-		<li><a href="../QuadSim/index.html">
+		<li><a href="../Projects/QuadSim/index.html">
 			QuadSIM
 		</a></li>	
-		<li><a href="../SumoBot/index.html">
+		<li><a href="../Projects/SumoBot/index.html">
 			SumoBot
 		</a></li>		
-        <li><a class="MenuBarItemSubmenu" href="#">FIRST Robotics</a>
+        <li><a class="../MenuBarItemSubmenu" href="Projects/FIRST/index.html">FIRST Robotics</a>
           <ul>
-            <li><a href="#">Blizzard X</a></li>
-            <li><a href="#">Blizzard XI</a></li>
-            <li><a href="#">Blizzard XII</a></li>
-            <li><a href="#">Blizzard XIII</a></li>
+            <li><a href="../Projects/FIRST/index.html#2009">Blizzard X</a></li>
+            <li><a href="../Projects/FIRST/index.html#2010">Blizzard XI</a></li>
+            <li><a href="../Projects/FIRST/index.html#2011">Blizzard XII</a></li>
+            <li><a href="../Projects/FIRST/index.html#2012">Blizzard XIII</a></li>
           </ul>
         </li>
-        <li><a class="MenuBarItemSubmenu" href="#">VEX Robotics</a>
-          <ul>
-            <li><a href="#">2009</a></li>
-            <li><a href="#">2010</a></li>
-            <li><a href="#">2011</a></li>
-            <li><a href="#">2012</a></li>
-          </ul>
-        </li>
-        <li><a href="http://velocitaracing.weebly.com/">
+        <li><a href="../Projects/VEX/index.html">
+			VEX Robotics
+		</a></li>
+        <li><a href="../Projects/F1/index.html">
 				F1 in Schools
 		</a></li>
-        <li><a href="#">Skills Robotics</a></li>
+        <li><a href="../Projects/Skills/index.html">Skills Robotics</a></li>
 
       </ul>
     </li>
@@ -82,33 +92,29 @@ Do the following if you're using your customized build of modernizr (http://www.
   </ul>
 </div>
 
-
 <div class="Block" id="Strangers">
-  <h1>Quad Sim </h1>
+  <h1>F1 in Schools </h1>
 
     <div id="LayoutDiv1">
-		<div class="Image" ><p><img src="Project QuadSIM.JPG" width="100%"></p>
+		<div class="Image" ><p><img src="Project F1.JPG"></p>
 		</div>
         <div class="Paragraph">
-			<P>QuadSim was the first project I worked on in a hackathon. The aim of the project was to get familiar with Microsoft's Kinnect developer kit and use it to create an intuitive game. My group and I decided to create a quadcopter simulator where the hand movements would determine the yaw, pitch, and roll as well as the throttle speed. We used the Unitiy game engine to interface with the sensor and to control all aspects of the simulator. The sensor viewed the angles of both the player's hand and provided an experience similar to using the wheel on an airplane.</P>
+			<P>This  was the one of the most challenging competitions in terms of coordinating  resources between team members. I was a part of the only collaboration team in  the regional competition. This meant that students from different schools all  collaborated to work as a single team. This posed a challenge as unlike most  teams it was difficult for us to host regular meetings to communicate the  team&rsquo;s progress. This hurdle was overcome by dividing the work into 3 rolls.  These were manufacturing, marketing and outreach. The team agreed to  collaborate on the overall design of the F1 car as it was the most important  part of the competition.</P>
 		</div>
 	</div>
-
-
-    
-  <div id="LayoutDiv2">
-    <div id="NudgeMe" class="Image">
-      <iframe margine-top="5%" width="95%" height="400px" src="https://www.youtube.com/embed/QvIKqO3_fws" frameborder="0" allowfullscreen></iframe>
-    </div>
-    <div class="Paragraph">
-      <P> What I found exciting about this project was that I could apply my knowledge in mechanical design and simulation to create a basic simulator. The models in this project were designed on Autodesk Inventor and the textures were applied on Blender. This project was the first time I worked in a team for a pure software based application. Through this experience I learned how essential it is to create modular code. Furthermore my tem an I got a chance to be mentored by software developers from Microsoft and learned a lot about the Kinect sensor</P></div>
-  </div>
+    <div id="LayoutDiv2">
+		<div class="Image" ><p><img src="image057.gif"></p>
+		</div>
+        <div class="Paragraph">
+      		<P>
+            	The car was modeled to have a larger body than  most F1 cars. It was a designed based on the Boxy Fish that had one of the  lowest drag coefficients in fish. As can be seen in Figure 6, the shape of the  body reduced the low pressure zone behind the f1 car. This low pressure was  also further reduced through a hole at eh bottom of the car. This can be  indicated by the green (reduced low pressure) marks in the wind tunnel result. <br>
+            	For more information Please <a href="http://velocitaracing.weebly.com/"> visit our website </a>
+            </P>
+		</div>
+	</div>
   
-  <div id="LayoutDiv2">
-    <div class="Image"><p><img src="20141011-DSC04503.jpg"></p>
-    </div>
-    <div class="Paragraph">
-      <P> The project proceeded to win the Company API prize from Microsoft at a hackathon in Rutgers university(HACK RU). As a result my team and I got to meet a lot of representatives from different companies and get their opinion and feedback on our project. The source code to our project is publically available on the team <a href="https://github.com/SNavleen/QuadSim">GIT</a></P></div>
+  <div id="LayoutDiv3">
+	<iframe src="http://velocitaracing.weebly.com/" height="700"></iframe>
   </div>
 </div>
 <script type="text/javascript">
