--- a/Projects/VEX/index.html
+++ b/Projects/VEX/index.html
@@ -34,48 +34,58 @@ Do the following if you're using your customized build of modernizr (http://www.
 <div class="gridContainer clearfix">
   <ul id="MenuBar1" class="MenuBarHorizontal">
     <li>
-		<a class="MenuBarItemSubmenu" href="../../index.html">
+		<a href="../index.html">
 			Home
 		</a>
 	</li>
-    <li><a href="#">Interests</a></li>
-    <li><a class="MenuBarItemSubmenu" href="#">Projects</a>
+    <li><a class="MenuBarItemSubmenu" href="#Interest" >Interests</a>
+		<ul>
+			<li><a href="../Interests/Origami/index.html">
+				Origami
+			</a></li>
+			<li><a href="../Interests/Travelling/index.html">
+				Travelling
+			</a></li>
+			<li><a href="../Interests/Robots/index.html">
+				Robots
+			</a></li>
+			<li><a href="../Interests/Photography/index.html">
+				Photography
+			</a></li>
+			</ul>
+	</li>
+    <li><a class="MenuBarItemSubmenu" href="#Project">Projects</a>
       <ul>
-		<li><a href="../EcoCAR/index.html">
+		<li><a href="../Projects/EcoCAR/index.html">
 			McMaster EcoCar3
 		</a></li>
-		<li><a href="../FormulaHybrid/index.html">
+		<li><a href="../Projects/FormulaHybrid/index.html">
 			McMaster Formula Hybrid
 		</a></li>
-        <li><a href="../Strangers/index.html">
+        <li><a href="../Projects/Strangers/index.html">
 			Strangers App
 		</a></li>	
-		<li><a href="../QuadSim/index.html">
+		<li><a href="../Projects/QuadSim/index.html">
 			QuadSIM
 		</a></li>	
-		<li><a href="../SumoBot/index.html">
+		<li><a href="../Projects/SumoBot/index.html">
 			SumoBot
 		</a></li>		
-        <li><a class="MenuBarItemSubmenu" href="#">FIRST Robotics</a>
+        <li><a class="../MenuBarItemSubmenu" href="Projects/FIRST/index.html">FIRST Robotics</a>
           <ul>
-            <li><a href="#">Blizzard X</a></li>
-            <li><a href="#">Blizzard XI</a></li>
-            <li><a href="#">Blizzard XII</a></li>
-            <li><a href="#">Blizzard XIII</a></li>
+            <li><a href="../Projects/FIRST/index.html#2009">Blizzard X</a></li>
+            <li><a href="../Projects/FIRST/index.html#2010">Blizzard XI</a></li>
+            <li><a href="../Projects/FIRST/index.html#2011">Blizzard XII</a></li>
+            <li><a href="../Projects/FIRST/index.html#2012">Blizzard XIII</a></li>
           </ul>
         </li>
-        <li><a class="MenuBarItemSubmenu" href="#">VEX Robotics</a>
-          <ul>
-            <li><a href="#">2009</a></li>
-            <li><a href="#">2010</a></li>
-            <li><a href="#">2011</a></li>
-            <li><a href="#">2012</a></li>
-          </ul>
-        </li>
-        <li><a href="http://velocitaracing.weebly.com/">
+        <li><a href="../Projects/VEX/index.html">
+			VEX Robotics
+		</a></li>
+        <li><a href="../Projects/F1/index.html">
 				F1 in Schools
 		</a></li>
-        <li><a href="#">Skills Robotics</a></li>
+        <li><a href="../Projects/Skills/index.html">Skills Robotics</a></li>
 
       </ul>
     </li>
@@ -83,7 +93,7 @@ Do the following if you're using your customized build of modernizr (http://www.
   </ul>
 </div>
 
-<div id="FIRST" class="Block">
+<div id="VEX" class="Block">
 	<h1>VEX Robotics Competition</h1>
    	<div class="Image"><img src="Project VEX.jpg"></div>
     <div class="Paragraph">
@@ -92,23 +102,35 @@ Do the following if you're using your customized build of modernizr (http://www.
    	    	I have competed in the VEX robotics competition from 2008 to 2012. Furthermore  I have mentored younger students and taught them how to build more robust  machines. This was primarily done While I was a teaching assistant in the 11th  grade.
         </p>
 	</div>
-    <ul>
+</div>
+<div id="Images" class="Block">    
+    <ul class="Icons1">
     	<li>
-			<h2><img src="image046.jpg">            	
-            Triangle  bracing was added to the primary bean to ensure the frame would not flex while  the robot lifted heavy loads.</h2>
+            	<img src="image046.jpg">
+            <p>            	
+            	<br>Triangle  bracing was added to the primary bean to ensure the frame would not flex while  the robot lifted heavy loads.
+            </p>
         </li>
         <li>
         	<ul>
             	<li><img src="image048.jpg">
-            	  <p>Unsupported drive shafts often got bent under heavy loads. </p>
+            	  <p><br>Unsupported drive shafts often got bent under heavy loads. </p>
             	</li>
-                <li><img src="image047.jpg">A  second beam and aditional gearing were added to reduce shear stress and torsion</li>
+                <li><img src="image047.jpg">
+                  <p><br>A  second beam and aditional gearing were added to reduce shear stress and torsion</p>
+                </li>
             </ul>
         </li>
         <li><img src="image050.jpg">
-        Energy  loss through friction is eliminated by using grease and building well aligned  gearboxes to prevent unnecessary resistance</li>
+            <p>
+                <br>Energy  loss through friction is eliminated by using grease and building well aligned  gearboxes to prevent unnecessary resistance
+            </p>
+        </li>
         <li><img src="image049.jpg">
-        A  final product where the number of gears is reduced to eliminate losses through  friction. A central conical frame was used to reduce unnecessary strain due to  the weight of the pickup assembly.</li>
+            <p>
+                <br>A  final product where the number of gears is reduced to eliminate losses through  friction. A central conical frame was used to reduce unnecessary strain due to  the weight of the pickup assembly.
+            </p>
+        </li>
     </ul>
 </div>
 <script type="text/javascript">
