--- a/index.html
+++ b/index.html
@@ -39,16 +39,16 @@ Do the following if you're using your customized build of modernizr (http://www.
 	</li>
     <li><a class="MenuBarItemSubmenu" href="#Interest" >Interests</a>
 		<ul>
-			<li><a href="#">
+			<li><a href="Interests/Origami/index.html">
 				Origami
 			</a></li>
 			<li><a href="Interests/Travelling/index.html">
 				Travelling
 			</a></li>
-			<li><a href="#">
+			<li><a href="Interests/Robots/index.html">
 				Robots
 			</a></li>
-			<li><a href="#">
+			<li><a href="Interests/Photography/index.html">
 				Photography
 			</a></li>
 			</ul>
@@ -84,7 +84,7 @@ Do the following if you're using your customized build of modernizr (http://www.
         <li><a href="Projects/F1/index.html">
 				F1 in Schools
 		</a></li>
-        <li><a href="#">Skills Robotics</a></li>
+        <li><a href="Projects/Skills/index.html">Skills Robotics</a></li>
 
       </ul>
     </li>
@@ -167,7 +167,7 @@ Do the following if you're using your customized build of modernizr (http://www.
       </h2>
     </div>
   </a>
-  <a href="">
+  <a href="Projects/Class/index.html">
     <div class="Attribute">
       <h2>
         Class Projects
@@ -175,7 +175,7 @@ Do the following if you're using your customized build of modernizr (http://www.
       </h2>
     </div>
   </a>
-  <a href="http://www.firstroboticscanada.org/main/">
+  <a href="Projects/FIRST/index.html">
     <div class="Attribute">
       <h2>
         FIRST Robotics
@@ -183,7 +183,7 @@ Do the following if you're using your customized build of modernizr (http://www.
       </h2>
     </div>
   </a>
-  <a href="http://velocitaracing.weebly.com/">
+  <a href="Projects/F1/index.html">
     <div class="Attribute">
       <h2>
         F1 in Schools
@@ -191,7 +191,7 @@ Do the following if you're using your customized build of modernizr (http://www.
       </h2>
     </div>
   </a>
-  <a href="http://www.vexrobotics.com/">
+  <a href="Projects/VEX/index.html">
     <div class="Attribute">
       <h2>
         VEX Robotics
@@ -199,7 +199,7 @@ Do the following if you're using your customized build of modernizr (http://www.
       </h2>
     </div>
   </a>
-  <a href="http://www.skillsontario.com/">
+  <a href="Projects/Skills/index.html">
     <div class="Attribute">
       <h2>
         Skills Robotics
