--- a/Projects/QuadSim/index.html
+++ b/Projects/QuadSim/index.html
@@ -33,48 +33,58 @@ Do the following if you're using your customized build of modernizr (http://www.
 <div class="gridContainer clearfix">
   <ul id="MenuBar1" class="MenuBarHorizontal">
     <li>
-		<a class="MenuBarItemSubmenu" href="../../index.html">
+		<a href="../index.html">
 			Home
 		</a>
 	</li>
-    <li><a href="#">Interests</a></li>
-    <li><a class="MenuBarItemSubmenu" href="#">Projects</a>
+    <li><a class="MenuBarItemSubmenu" href="#Interest" >Interests</a>
+		<ul>
+			<li><a href="../Interests/Origami/index.html">
+				Origami
+			</a></li>
+			<li><a href="../Interests/Travelling/index.html">
+				Travelling
+			</a></li>
+			<li><a href="../Interests/Robots/index.html">
+				Robots
+			</a></li>
+			<li><a href="../Interests/Photography/index.html">
+				Photography
+			</a></li>
+			</ul>
+	</li>
+    <li><a class="MenuBarItemSubmenu" href="#Project">Projects</a>
       <ul>
-		<li><a href="../EcoCAR/index.html">
+		<li><a href="../Projects/EcoCAR/index.html">
 			McMaster EcoCar3
 		</a></li>
-		<li><a href="../FormulaHybrid/index.html">
+		<li><a href="../Projects/FormulaHybrid/index.html">
 			McMaster Formula Hybrid
 		</a></li>
-        <li><a href="../Strangers/index.html">
+        <li><a href="../Projects/Strangers/index.html">
 			Strangers App
 		</a></li>	
-		<li><a href="../QuadSim/index.html">
+		<li><a href="../Projects/QuadSim/index.html">
 			QuadSIM
 		</a></li>	
-		<li><a href="../SumoBot/index.html">
+		<li><a href="../Projects/SumoBot/index.html">
 			SumoBot
 		</a></li>		
-        <li><a class="MenuBarItemSubmenu" href="#">FIRST Robotics</a>
+        <li><a class="../MenuBarItemSubmenu" href="Projects/FIRST/index.html">FIRST Robotics</a>
           <ul>
-            <li><a href="#">Blizzard X</a></li>
-            <li><a href="#">Blizzard XI</a></li>
-            <li><a href="#">Blizzard XII</a></li>
-            <li><a href="#">Blizzard XIII</a></li>
+            <li><a href="../Projects/FIRST/index.html#2009">Blizzard X</a></li>
+            <li><a href="../Projects/FIRST/index.html#2010">Blizzard XI</a></li>
+            <li><a href="../Projects/FIRST/index.html#2011">Blizzard XII</a></li>
+            <li><a href="../Projects/FIRST/index.html#2012">Blizzard XIII</a></li>
           </ul>
         </li>
-        <li><a class="MenuBarItemSubmenu" href="#">VEX Robotics</a>
-          <ul>
-            <li><a href="#">2009</a></li>
-            <li><a href="#">2010</a></li>
-            <li><a href="#">2011</a></li>
-            <li><a href="#">2012</a></li>
-          </ul>
-        </li>
-        <li><a href="http://velocitaracing.weebly.com/">
+        <li><a href="../Projects/VEX/index.html">
+			VEX Robotics
+		</a></li>
+        <li><a href="../Projects/F1/index.html">
 				F1 in Schools
 		</a></li>
-        <li><a href="#">Skills Robotics</a></li>
+        <li><a href="../Projects/Skills/index.html">Skills Robotics</a></li>
 
       </ul>
     </li>
