--- a/Projects/Skills/index.html
+++ b/Projects/Skills/index.html
@@ -9,7 +9,7 @@
 <meta charset="utf-8">
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>In Class Projects</title>
+<title>About Prakhar Garg</title>
 <link href="../../../../../../Program Files (x86)/Adobe/Adobe Dreamweaver CS6/Configuration/BuiltIn/Fluid Grid Layout/boilerplate.css" rel="stylesheet" type="text/css">
 <link href="../projects.css" rel="stylesheet" type="text/css">
 <link href="../../SpryAssets/SpryMenuBarHorizontal.css" rel="stylesheet" type="text/css">
@@ -33,48 +33,58 @@ Do the following if you're using your customized build of modernizr (http://www.
 <div class="gridContainer clearfix">
   <ul id="MenuBar1" class="MenuBarHorizontal">
     <li>
-		<a class="MenuBarItemSubmenu" href="../../index.html">
+		<a href="../index.html">
 			Home
 		</a>
 	</li>
-    <li><a href="#">Interests</a></li>
-    <li><a class="MenuBarItemSubmenu" href="#">Projects</a>
+    <li><a class="MenuBarItemSubmenu" href="#Interest" >Interests</a>
+		<ul>
+			<li><a href="../Interests/Origami/index.html">
+				Origami
+			</a></li>
+			<li><a href="../Interests/Travelling/index.html">
+				Travelling
+			</a></li>
+			<li><a href="../Interests/Robots/index.html">
+				Robots
+			</a></li>
+			<li><a href="../Interests/Photography/index.html">
+				Photography
+			</a></li>
+			</ul>
+	</li>
+    <li><a class="MenuBarItemSubmenu" href="#Project">Projects</a>
       <ul>
-		<li><a href="../EcoCAR/index.html">
+		<li><a href="../Projects/EcoCAR/index.html">
 			McMaster EcoCar3
 		</a></li>
-		<li><a href="../FormulaHybrid/index.html">
+		<li><a href="../Projects/FormulaHybrid/index.html">
 			McMaster Formula Hybrid
 		</a></li>
-        <li><a href="../Strangers/index.html">
+        <li><a href="../Projects/Strangers/index.html">
 			Strangers App
 		</a></li>	
-		<li><a href="../QuadSim/index.html">
+		<li><a href="../Projects/QuadSim/index.html">
 			QuadSIM
 		</a></li>	
-		<li><a href="../SumoBot/index.html">
+		<li><a href="../Projects/SumoBot/index.html">
 			SumoBot
 		</a></li>		
-        <li><a class="MenuBarItemSubmenu" href="#">FIRST Robotics</a>
+        <li><a class="../MenuBarItemSubmenu" href="Projects/FIRST/index.html">FIRST Robotics</a>
           <ul>
-            <li><a href="#">Blizzard X</a></li>
-            <li><a href="#">Blizzard XI</a></li>
-            <li><a href="#">Blizzard XII</a></li>
-            <li><a href="#">Blizzard XIII</a></li>
+            <li><a href="../Projects/FIRST/index.html#2009">Blizzard X</a></li>
+            <li><a href="../Projects/FIRST/index.html#2010">Blizzard XI</a></li>
+            <li><a href="../Projects/FIRST/index.html#2011">Blizzard XII</a></li>
+            <li><a href="../Projects/FIRST/index.html#2012">Blizzard XIII</a></li>
           </ul>
         </li>
-        <li><a class="MenuBarItemSubmenu" href="#">VEX Robotics</a>
-          <ul>
-            <li><a href="#">2009</a></li>
-            <li><a href="#">2010</a></li>
-            <li><a href="#">2011</a></li>
-            <li><a href="#">2012</a></li>
-          </ul>
-        </li>
-        <li><a href="http://velocitaracing.weebly.com/">
+        <li><a href="../Projects/VEX/index.html">
+			VEX Robotics
+		</a></li>
+        <li><a href="../Projects/F1/index.html">
 				F1 in Schools
 		</a></li>
-        <li><a href="#">Skills Robotics</a></li>
+        <li><a href="../Projects/Skills/index.html">Skills Robotics</a></li>
 
       </ul>
     </li>
@@ -82,12 +92,32 @@ Do the following if you're using your customized build of modernizr (http://www.
   </ul>
 </div>
 
-<div id="FIRST" class="Block">
-	<h1>Skills Robotics Competition</h1>
-   	<div class="Image"><img src="Project Skills.jpg"></div>
+<div class="Block" id="Strangers">
+	<h1>Strangers Android Application </h1>
+
+
+    <div id="LayoutDiv1">
+		<div class="Image"><p><img src="Project Skills.JPG" width="100%"></p></div>
+        <div class="Paragraph">
+			<P>The <a href="http://www.skillsontario.com/"> Skills Robotics Competition</a> was organised by the government of Ontario  to help increase student interest in the skilled trades and robotics. The aim  for this competition was to score balls into a fishing net attached behind and  opposing robot. This was fortunate for me because I had experience building a  robot for a similar competition in 2009. My team and I decided to use what we  learned from the previous competition. However, a significantly lower budget  made it a much larger challenge. Instead of using the high power CIM motors, we  chose to use old DeWalt drills for the robot&rsquo;s drivetrain.</P>
+</div>
+	</div>
+
+
+    
+  <div id="LayoutDiv2">
+    <div id="NudgeMe" class="Image"><p><img src="image052.jpg" width="847"></p></div>
     <div class="Paragraph">
-      	<p>Text to be added</p>
+      <P>We  choose to use a double wheel shooter to allow the robot to shoot the ball  directly ahead. This helps make it easier to aim the robot when shooting the  ball. Both rollers  were individully driven. This keeps the assembly simple and incase one of the  motor blows, the robot will still be able to eject the balls.</p>
     </div>
+  </div>
+  
+  <div id="LayoutDiv2">
+    <div class="Image"><p><img src="image053.jpg" width="479"></p></div>
+    <div class="Paragraph">
+      <P>The final robot was a verry fast machine. It was able to  quickly pick up all the balls and put them into their designated goal.  Unfortunately during the competition one of the plywood wheels begun to crack.  That was easily fixed by using some woodglue. We learned to dedicate more  financial resources to the drive system. Even for the short amount of time that  the robot wa immobile, the funtion worked well enough to get a couple of goals  in. This was thanks to us designing the shooter to make full field shots.</P>
+    </div>
+  </div>
 </div>
 <script type="text/javascript">
 var MenuBar1 = new Spry.Widget.MenuBar("MenuBar1", {imgDown:"SpryAssets/SpryMenuBarDownHover.gif", imgRight:"SpryAssets/SpryMenuBarRightHover.gif"});
