--- a/Interests/Photography/index.html
+++ b/Interests/Photography/index.html
@@ -8,7 +8,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Travelling</title>
+<title>Photography</title>
 <link href="../../boilerplate.css" rel="stylesheet" type="text/css">
 <link href="index.css" rel="stylesheet" type="text/css">
 <link href="../Interests.css" rel="stylesheet" type="text/css">
@@ -83,9 +83,8 @@ Do the following if you're using your customized build of modernizr (http://www.
 </div>
 
 <div class="Block">
-  <h1>Travelling</h1>
-  <p> The following map displays a geotag of all the places I have travelled to.</p>
-  <iframe src="https://www.google.com/maps/d/embed?mid=zya9LE4D6mZY.kgkn0RCzu1IQ" width="95%" height="480"></iframe>
+  <h1>Photography</h1>
+  <object width="100%" height="600"> <param name="flashvars" value="offsite=true&lang=en-us&page_show_url=%2Fphotos%2F133001206%40N08%2Fshow%2F&page_show_back_url=%2Fphotos%2F133001206%40N08%2F&user_id=133001206@N08&jump_to="></param> <param name="movie" value="https://www.flickr.com/apps/slideshow/show.swf?v=1811922554"></param> <param name="allowFullScreen" value="true"></param><embed type="application/x-shockwave-flash" src="https://www.flickr.com/apps/slideshow/show.swf?v=1811922554" allowFullScreen="true" flashvars="offsite=true&lang=en-us&page_show_url=%2Fphotos%2F133001206%40N08%2Fshow%2F&page_show_back_url=%2Fphotos%2F133001206%40N08%2F&user_id=133001206@N08&jump_to=" width="400" height="300"></embed></object>
 </div>
 
         
