--- a/Projects/QuadSim/index.html
+++ b/Projects/QuadSim/index.html
@@ -33,58 +33,48 @@ Do the following if you're using your customized build of modernizr (http://www.
 <div class="gridContainer clearfix">
   <ul id="MenuBar1" class="MenuBarHorizontal">
     <li>
-		<a href="../../index.html">
+		<a class="MenuBarItemSubmenu" href="../../index.html">
 			Home
 		</a>
 	</li>
-    <li><a class="MenuBarItemSubmenu" href="#Interest" >Interests</a>
-		<ul>
-			<li><a href="../../Interests/Origami/index.html">
-				Origami
-			</a></li>
-			<li><a href="../../Interests/Travelling/index.html">
-				Travelling
-			</a></li>
-			<li><a href="../../Interests/Robots/index.html">
-				Robots
-			</a></li>
-			<li><a href="../../Interests/Photography/index.html">
-				Photography
-			</a></li>
-			</ul>
-	</li>
-    <li><a class="MenuBarItemSubmenu" href="#Project">Projects</a>
+    <li><a href="#">Interests</a></li>
+    <li><a class="MenuBarItemSubmenu" href="#">Projects</a>
       <ul>
-		<li><a href="../../Projects/EcoCAR/index.html">
+		<li><a href="../EcoCAR/index.html">
 			McMaster EcoCar3
 		</a></li>
-		<li><a href="../../Projects/FormulaHybrid/index.html">
+		<li><a href="../FormulaHybrid/index.html">
 			McMaster Formula Hybrid
 		</a></li>
-        <li><a href="../../Projects/Strangers/index.html">
+        <li><a href="../Strangers/index.html">
 			Strangers App
 		</a></li>	
-		<li><a href="../../Projects/QuadSim/index.html">
+		<li><a href="../QuadSim/index.html">
 			QuadSIM
 		</a></li>	
-		<li><a href="../../Projects/SumoBot/index.html">
+		<li><a href="../SumoBot/index.html">
 			SumoBot
 		</a></li>		
-        <li><a class="../../MenuBarItemSubmenu" href="Projects/FIRST/index.html">FIRST Robotics</a>
+        <li><a class="MenuBarItemSubmenu" href="#">FIRST Robotics</a>
           <ul>
-            <li><a href="../../Projects/FIRST/index.html#2009">Blizzard X</a></li>
-            <li><a href="../../Projects/FIRST/index.html#2010">Blizzard XI</a></li>
-            <li><a href="../../Projects/FIRST/index.html#2011">Blizzard XII</a></li>
-            <li><a href="../../Projects/FIRST/index.html#2012">Blizzard XIII</a></li>
+            <li><a href="#">Blizzard X</a></li>
+            <li><a href="#">Blizzard XI</a></li>
+            <li><a href="#">Blizzard XII</a></li>
+            <li><a href="#">Blizzard XIII</a></li>
           </ul>
         </li>
-        <li><a href="../../Projects/VEX/index.html">
-			VEX Robotics
-		</a></li>
-        <li><a href="../../Projects/F1/index.html">
+        <li><a class="MenuBarItemSubmenu" href="#">VEX Robotics</a>
+          <ul>
+            <li><a href="#">2009</a></li>
+            <li><a href="#">2010</a></li>
+            <li><a href="#">2011</a></li>
+            <li><a href="#">2012</a></li>
+          </ul>
+        </li>
+        <li><a href="http://velocitaracing.weebly.com/">
 				F1 in Schools
 		</a></li>
-        <li><a href="../../Projects/Skills/index.html">Skills Robotics</a></li>
+        <li><a href="#">Skills Robotics</a></li>
 
       </ul>
     </li>
@@ -97,7 +87,7 @@ Do the following if you're using your customized build of modernizr (http://www.
   <h1>Quad Sim </h1>
 
     <div id="LayoutDiv1">
-		<div class="Image" ><p><img src="Project QuadSIM.JPG" width="100%"></p>
+      <div class="Image" ><p><img src="Project QuadSIM.JPG" width="100%"></p>
 		</div>
         <div class="Paragraph">
 			<P>QuadSim was the first project I worked on in a hackathon. The aim of the project was to get familiar with Microsoft's Kinnect developer kit and use it to create an intuitive game. My group and I decided to create a quadcopter simulator where the hand movements would determine the yaw, pitch, and roll as well as the throttle speed. We used the Unitiy game engine to interface with the sensor and to control all aspects of the simulator. The sensor viewed the angles of both the player's hand and provided an experience similar to using the wheel on an airplane.</P>
