--- a/Contact/index.html
+++ b/Contact/index.html
@@ -88,15 +88,15 @@ Do the following if you're using your customized build of modernizr (http://www.
 
     <div id="LayoutDiv1">
       <div class="Image" >
-      	<p><img src="../11062379_10200468276227128_3031736896492371818_o.jpg" width="1232"></p>
+      	<p><img src="../11062379_10200468276227128_3031736896492371818_o.jpg"></p>
 	  </div>
       <div class="Paragraph">
 		<P>For any further questions and details. You can contact me by E-mail. </P>
-		<form action="mailto:prakhar@live.ca" enctype="text/plain" method="post">
-            <table width="100%" border="0" cellpadding="0px">
+		<form action="mailto:prakhar@live.ca" enctype="text/plain" method="post" width="95%">
+            <table width="95%" border="0" cellpadding="0px">
             	<tr>
-                	<th scope="col"><p>Name:</p></th>
-                    <td scope="col"><input name="Name" type="text" id="Name" size="40"></td>
+                	<th width="20%"scope="col"><p>Name:</p></th>
+                    <td width="80%"scope="col"><input name="Name" type="text" id="Name" size="40"></td>
                 </tr>
                 <tr>
                     <th scope="col"><p>E-Mail:</p></th>
@@ -104,7 +104,7 @@ Do the following if you're using your customized build of modernizr (http://www.
                 </tr>
                 <tr>
                     <th scope="col"><p>Comment:</p></th>
-                    <td><textarea name="Comment" cols="55" rows="5" id="Comment"></textarea></td>
+                    <td><textarea name="Comment" cols="40" rows="5" id="Comment"></textarea></td>
                 </tr>
                 <tr>
                     <td scope="col"><input type="submit" name="Submit" value="Submit"></td>
