--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@ Do the following if you're using your customized build of modernizr (http://www.
 <script src="SpryAssets/SpryMenuBar.js" type="text/javascript"></script>
 </head>
 <body>
-<h1 style="color:#FF0000;background-color:#00FF66;">This website is currently under construction</h1>
-<div class="gridContainer clearfix">
+<h1 style="color:#FF0000; background-color:#00FF66;">This website is currently under construction</h1>
+<div class="Block">
   <ul id="MenuBar1" class="MenuBarHorizontal">
     <li>
 		<a href="index.html">
@@ -100,119 +100,105 @@ Do the following if you're using your customized build of modernizr (http://www.
 </div>
 <div name="Interest" class="Block" id="Interest">
   <div class="Title"><h1>Interests</h1></div>
-  <div class="Attribute">
+  <a href="Interests/Origami/index.html" class="Attribute">
     <h2>
       Origami
       <img src="Interests/Origami/Interest Origami.jpg">
     </h2>
-  </div>
-  <div class="Attribute">
+  </a>
+  <a href="Interests/Travelling/index.html" class="Attribute">
     <h2>
       Travelling
       <img src="Interests/Travelling/Interest Travelling.jpg">
     </h2>
-  </div>
-  <div class="Attribute">
+  </a>
+  <a href="Interests/Robots/index.html" class="Attribute">
     <h2>
       Robots
       <img src="Interests/Robots/Interest Robot.jpg">
     </h2>
-  </div>
-  <div class="Attribute">
+  </a>
+  <a href="Interests/Photography/index.html" class="Attribute">
     <h2>
       Photography
 	  <img src="Interests/Photography/Interests Photography.jpg">
     </h2>
-  </div>
+  </a>
 </div>
 <div name="Project" class="Block" id="Project">
   <div class="Title"><h1>Projects</h1></div>
-  <a href="Projects/EcoCAR/index.html">
-  	<div class="Attribute">
-    	<h2>
-          EcoCAR3
-          <img src="Projects/EcoCAR/Project EcoCAR3.jpg" width=100%>
-        </h2>
-  	</div>
+  <a href="Projects/EcoCAR/index.html" class="Attribute">
+    <h2>
+      EcoCAR3
+      <img src="Projects/EcoCAR/Project EcoCAR3.jpg">
+    </h2>
   </a>
-  <a href="Projects/FormulaHybrid/index.html">
-    <div class="Attribute">
+  <a href="Projects/FormulaHybrid/index.html" class="Attribute">
       <h2>
         Formula Hybrid
-        <img src="Projects/FormulaHybrid/Project Formula Hybrid.jpg" width=100%>
+        <img src="Projects/FormulaHybrid/Project Formula Hybrid.jpg">
       </h2>
-    </div>
   </a>
-  <a href="Projects/Strangers/index.html">
-    <div class="Attribute">
+  <a href="Projects/Strangers/index.html" class="Attribute">
       <h2>
         Strangers
-        <img src="Projects/Strangers/Project Strangers.jpg" width=100%>
+        <img src="Projects/Strangers/Project Strangers.jpg">
       </h2>
-    </div>
   </a>
-  <a href="Projects/QuadSim/index.html">
-    <div class="Attribute">
+  <a href="Projects/QuadSim/index.html" class="Attribute">
       <h2>
         QuadSim
-        <img src="Projects/QuadSim/Project QuadSIM.JPG" width="100%">
+        <img src="Projects/QuadSim/Project QuadSIM.JPG">
       </h2>
-    </div>
   </a>
-  <a href="Projects/SumoBot/index.html">  
-    <div class="Attribute">
-      <h2>
-        SumoBot 
-        <img src="Projects/SumoBot/Project SumoBot.jpg" width=100%>
-      </h2>
-    </div>
+  <a href="Projects/SumoBot/index.html" class="Attribute">  
+  	<h2>
+  		SumoBot 
+    	<img src="Projects/SumoBot/Project SumoBot.jpg">
+  	</h2>
   </a>
-  <a href="Projects/Class/index.html">
-    <div class="Attribute">
+  <a href="Projects/Class/index.html" class="Attribute">
       <h2>
         Class Projects
-        <img src="Projects/Class/Project Class.jpg" width="100">
+        <img src="Projects/Class/Project Class.jpg">
       </h2>
-    </div>
   </a>
-  <a href="Projects/FIRST/index.html">
-    <div class="Attribute">
+  <a href="Projects/FIRST/index.html" class="Attribute">
       <h2>
         FIRST Robotics
-        <img src="Projects/FIRST/Project FIRST.jpg" width="100%">
+        <img src="Projects/FIRST/Project FIRST.jpg">
       </h2>
-    </div>
   </a>
-  <a href="Projects/F1/index.html">
-    <div class="Attribute">
+  <a href="Projects/F1/index.html" class="Attribute">
       <h2>
         F1 in Schools
-        <img src="Projects/F1/Project F1.jpg" width="100%">
+        <img src="Projects/F1/Project F1.jpg">
       </h2>
-    </div>
   </a>
-  <a href="Projects/VEX/index.html">
-    <div class="Attribute">
+  <a href="Projects/VEX/index.html" class="Attribute">
       <h2>
         VEX Robotics
-        <img src="Projects/VEX/Project VEX.jpg" width="100%">
+        <img src="Projects/VEX/Project VEX.jpg">
       </h2>
-    </div>
   </a>
-  <a href="Projects/Skills/index.html">
-    <div class="Attribute">
+  <a href="Projects/Skills/index.html" class="Attribute">
       <h2>
         Skills Robotics
-        <img src="Projects/Skills/Project Skills.jpg" width="100%">
+        <img src="Projects/Skills/Project Skills.jpg">
       </h2>
-    </div>
   </a>
 </div>
 <div name="Community" class="Block" id="Community">
   <div class="Title"><h1>Community Involvement</h1></div>
-  <div class="Attribute"><h2>Mentorship</h2></div>
-  <div class="Attribute"><h2>Volunteering</h2></div>
-  <div class="Attribute"><h2>Alumni Group</h2></div>
+  <a href="Community/Mentorship/index.html" class="Attribute">
+  	<h2>Mentorship</h2>
+  </a>
+  <a href="Community/Volunteering/index.html" class="Attribute">
+  	<h2>Volunteering</h2>
+  </a>
+  <a href="Community/Alumni/index.html" class="Attribute">
+  	<h2>Alumni Group</h2>
+  </a>
 
 </div>
 <script type="text/javascript">
