Contact me page still need to link

--- a/Contact/index.html
+++ b/Contact/index.html
@@ -87,32 +87,72 @@ Do the following if you're using your customized build of modernizr (http://www.
   <h1>Contact Me </h1>
 
     <div id="LayoutDiv1">
-      <div class="Image" >
+		<div class="Image" >
       	<p><img src="../11062379_10200468276227128_3031736896492371818_o.jpg"></p>
 	  </div>
-      <div class="Paragraph">
-		<P>For any further questions and details. You can contact me by E-mail. </P>
-		<form action="mailto:prakhar@live.ca" enctype="text/plain" method="post" width="95%">
-            <table width="95%" border="0" cellpadding="0px">
-            	<tr>
-                	<th width="20%"scope="col"><p>Name:</p></th>
-                    <td width="80%"scope="col"><input name="Name" type="text" id="Name" size="40"></td>
-                </tr>
-                <tr>
-                    <th scope="col"><p>E-Mail:</p></th>
-                    <td><input name="E-mail" type="text" id="E-mail" size="40"></td>
-                </tr>
-                <tr>
-                    <th scope="col"><p>Comment:</p></th>
-                    <td><textarea name="Comment" cols="40" rows="5" id="Comment"></textarea></td>
-                </tr>
-                <tr>
-                    <td scope="col"><input type="submit" name="Submit" value="Submit"></td>
-                    <td></td>
-                </tr>
-            </table>
-		</form>
+		<div class="Paragraph">
+			<table width="95%" border="0" cellpadding="0px">
+				<tr>
+					<th width="20%"scope="col">
+						<p>Name:</p>
+					</th>
+					<td width="80%"scope="col">
+						<p>Prakhar Garg</p>
+					</td>
+				</tr>
+				<tr>
+					<th scope="col">
+						<p>E-mail:</p>
+					</th>
+					<td>
+						<p>prakhar@live.ca</p>
+					</td>
+				</tr>
+				<tr>
+					<th scope="col">
+						<p>School E-mail:</p>
+					</th>
+					<td>
+						<p>gargp2@mcmaster.ca</p>
+					</td>
+				</tr>								
+			</table>
+			
       </div>
+		<div>
+			<a href="#" class="Contact">
+				<img src="linkedin.png">
+				<p>LinkedIn</p>
+			</a>
+			<a href="#" class="Contact">
+				<img src="github.png">
+				<p>GitHub</p>
+			</a>
+			<a href="#" class="Contact">
+				<img src="challengepost.png">
+				<p>ChallengePost</p>
+			</a>
+			<a href="#" class="Contact">
+				<img src="google.png">
+				<p>Google Plus</p>
+			</a>
+			<a href="#" class="Contact">
+				<img src="hotmail.png">
+				<p>Windows Live</p>
+			</a>
+			<a href="#" class="Contact">
+				<img src="twiter.png">
+				<p>Twitter</p>
+			</a>
+			<a href="#" class="Contact">
+				<img src="flickr.png">
+				<p>Flickr</p>
+			</a>
+			<a href="#" class="Contact">
+				<img src="instagram.png">
+				<p>Instagram</p>
+			</a>
+		</div>
 	</div>
 
 
