added robotics page

--- a/Interests/Robots/index.html
+++ b/Interests/Robots/index.html
@@ -8,7 +8,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Photography</title>
+<title>Prakhar Garg | Robots</title>
 <link href="../../boilerplate.css" rel="stylesheet" type="text/css">
 <link href="index.css" rel="stylesheet" type="text/css">
 <link href="../Interests.css" rel="stylesheet" type="text/css">
@@ -83,7 +83,7 @@ Do the following if you're using your customized build of modernizr (http://www.
 </div>
 
 <div class="Block">
-  <h1>Photography </h1>
+  <h1>Robotics </h1>
   <object width="100%" height="600">
       <param name="flashvars" value="offsite=true&lang=en-us&page_show_url=%2Fphotos%2F133001206%40N08%2Fshow%2F&page_show_back_url=%2Fphotos%2F133001206%40N08%2F&user_id=133001206@N08&jump_to="></param>
       <param name="movie" value="https://www.flickr.com/apps/slideshow/show.swf?v=1811922554"></param>
