--- a/Interests/Origami/index.html
+++ b/Interests/Origami/index.html
@@ -8,7 +8,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Photography</title>
+<title>Origami</title>
 <link href="../../boilerplate.css" rel="stylesheet" type="text/css">
 <link href="index.css" rel="stylesheet" type="text/css">
 <link href="../Interests.css" rel="stylesheet" type="text/css">
@@ -83,49 +83,21 @@ Do the following if you're using your customized build of modernizr (http://www.
 </div>
 
 <div class="Block">
-  <h1>Photography </h1>
-  <object width="100%" height="600">
-      <param name="flashvars" value="offsite=true&lang=en-us&page_show_url=%2Fphotos%2F133001206%40N08%2Fshow%2F&page_show_back_url=%2Fphotos%2F133001206%40N08%2F&user_id=133001206@N08&jump_to="></param>
-      <param name="movie" value="https://www.flickr.com/apps/slideshow/show.swf?v=1811922554"></param>
+  <h1>Origami</h1>
+  <p> The following map displays a geotag of all the places I have travelled to.</p>
+  <div id="photos"></div>
+  <object width="400" height="300"> 
+      <param name="flashvars" value="offsite=true&lang=en-us&page_show_url=%2Fphotos%2F133001206%40N08%2Fsets%2F72157655404778998%2Fshow%2F&page_show_back_url=%2Fphotos%2F133001206%40N08%2Fsets%2F72157655404778998%2F&set_id=72157655404778998&jump_to="></param> 
+      <param name="movie" value="https://www.flickr.com/apps/slideshow/show.swf?v=1811922554"></param> 
       <param name="allowFullScreen" value="true"></param>
-      <embed type="application/x-shockwave-flash" src="https://www.flickr.com/apps/slideshow/show.swf?v=1811922554" allowFullScreen="true" flashvars="offsite=true&lang=en-us&page_show_url=%2Fphotos%2F133001206%40N08%2Fshow%2F&page_show_back_url=%2Fphotos%2F133001206%40N08%2F&user_id=133001206@N08&jump_to=" width="400" height="300">
-        <ul class="Instagram">
-            <li><img src="Instagram/image (1).jpg"></li>
-            <li><img src="Instagram/image (2).jpg"></li>
-            <li><img src="Instagram/image (3).jpg"></li>
-            <li><img src="Instagram/image (4).jpg"></li>
-            <li><img src="Instagram/image (5).jpg"></li>
-            <li><img src="Instagram/image (6).jpg"></li>
-            <li><img src="Instagram/image (7).jpg"></li>
-            <li><img src="Instagram/image (8).jpg"></li>
-            <li><img src="Instagram/image (9).jpg"></li>
-            <li><img src="Instagram/image (10).jpg"></li>
-            <li><img src="Instagram/image (11).jpg"></li>
-            <li><img src="Instagram/image (12).jpg"></li>
-            <li><img src="Instagram/image (13).jpg"></li>
-            <li><img src="Instagram/image (14).jpg"></li>
-            <li><img src="Instagram/image (15).jpg"></li>
-            <li><img src="Instagram/image (16).jpg"></li>
-            <li><img src="Instagram/image (17).jpg"></li>
-            <li><img src="Instagram/image (18).jpg"></li>
-            <li><img src="Instagram/image (19).jpg"></li>
-            <li><img src="Instagram/image (20).jpg"></li>
-            <li><img src="Instagram/image (21).jpg"></li>
-            <li><img src="Instagram/image (22).jpg"></li>
-            <li><img src="Instagram/image (23).jpg"></li>
-            <li><img src="Instagram/image (24).jpg"></li>
-            <li><img src="Instagram/image (25).jpg"></li>
-            <li><img src="Instagram/image (26).jpg"></li>
-            <li><img src="Instagram/image (27).jpg"></li>
-            <li><img src="Instagram/image (28).jpg"></li>
-            <li><img src="Instagram/image (29).jpg"></li>
-        </ul>
+      <embed type="application/x-shockwave-flash" src="https://www.flickr.com/apps/slideshow/show.swf?v=1811922554" allowFullScreen="true" flashvars="offsite=true&lang=en-us&page_show_url=%2Fphotos%2F133001206%40N08%2Fsets%2F72157655404778998%2Fshow%2F&page_show_back_url=%2Fphotos%2F133001206%40N08%2Fsets%2F72157655404778998%2F&set_id=72157655404778998&jump_to=" width="100%" height="300">
+      	<p>
+        	looks like you don't have flash on this device. Click here to view the models. 
+        </p>
+        <iframe src="https://www.flickr.com/photos/133001206@N08/sets/72157655404778998#" width="100%" height="300px">
+        </iframe>
       </embed>
   </object>
-
-  
-  
-  
 </div>
 
         
