--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>About Prakhar Garg</title>
+<title>Prakhar Garg | About Me</title>
 <link href="file:///C|/Program%20Files%20(x86)/Adobe/Adobe%20Dreamweaver%20CS6/Configuration/BuiltIn/Fluid%20Grid%20Layout/boilerplate.css" rel="stylesheet" type="text/css">
 <link href="index.css" rel="stylesheet" type="text/css">
 <link href="SpryAssets/SpryMenuBarHorizontal.css" rel="stylesheet" type="text/css">
@@ -94,7 +94,7 @@ Do the following if you're using your customized build of modernizr (http://www.
 <div name="AboutMe" class="Block" id="AboutMe">
 <div id="AboutMeText">
   <h1> About Me </h1>
-<p>I am a mechatronics engineerig student at McMaster University  who has a passion for  technology and innovation. My years of experience in robotics had helped me grow as an engineer and a person. The purpose of this website is to share some of my accomplishments and expand my knowledge on web development.</p></div>
+<p>I am a mechatronics engineering student at McMaster University  who has a passion for  technology and innovation. My years of experience in robotics had helped me grow as an engineer and a person. The purpose of this website is to share some of my accomplishments and expand my knowledge on web development.</p></div>
 <div id="AboutMePhoto" Class="Title"><p><img src="11062379_10200468276227128_3031736896492371818_o.jpg" width=100%></p>
 </div>
 </div>
