grammar in formula hybred

--- a/Projects/FormulaHybrid/index.html
+++ b/Projects/FormulaHybrid/index.html
@@ -97,7 +97,7 @@ Do the following if you're using your customized build of modernizr (http://www.
       <div id="LayoutDiv1">
 	      <div class="Image"><p><img src="Project Formula Hybrid.jpg" width="1476"></p></div>
           <div class="Paragraph">
-            <P>The <a href="http://www.formula-hybrid.org/">Formula Hybrid Competition</a> takes place during the spring of every year. It is regarded as the most complex and dynamic of the series of competitions hosted by the Society of Automotive Engineers for Collegiate Design. The purpose of the competition is to create the most efficient formula-style electric or plug-in hybrid race-car. Each car competes in numerous events to evaluate performance and fuel efficiency. During the event a special emphasis has been put on innovating new ways and adapting new techniques to increase the performance of the vehicle. </P></div>
+            <P>The <a href="http://www.formula-hybrid.org/">Formula Hybrid Competition</a> takes place annually. It is regarded as the most complex and dynamic of the series of competitions hosted by the Society of Automotive Engineers for Collegiate Design(acronym?). The purpose of the competition is to create the most efficient formula-style electric or plug-in hybrid race car. Each car competes in numerous events to evaluate performance and fuel efficiency. The competition emphasizes innovating new techniques to increase the performance of the vehicle. </P></div>
 </div>
 
 
@@ -105,7 +105,7 @@ Do the following if you're using your customized build of modernizr (http://www.
   <div id="LayoutDiv2">
     <div id="NudgeMe" class="Image"><p><img src="11174923_10200597563339225_3579215265931089820_n.jpg" width="682"></p></div>
     <div class="Paragraph">
-      <P>As a part of the <a href="http://www.formulahybrid.ca/#">McMaster Formula Hybrid team</a> I was able to work on the software and in turn help improve the performance of the car.I was responsible for working on the algorithm to detect and correct for the wheel slipping during acceleration and breaking events of the vehicle. I found this an excellent way to apply my knowledge of filters and real time systems from class. Filters were use to reduce noise in the system and help compensate for the sampling frequency that was limited by the speed of the CAN network of the vehicle. Unfortunately time constraints didn't allow for the proper testing of the software and a decision was made to not include the code during the competition to ensure the driver's safety.</P></div>
+      <P>As a part of the <a href="http://www.formulahybrid.ca/#">McMaster Formula Hybrid team,</a> I was able to work on the software, improving the performance of the car. I was responsible for working on the algorithm, to detect and correct for the wheel slipping during acceleration, and breaking events of the vehicle. This was an excellent way to apply my knowledge of filters and real-time systems from class. Filters were use to reduce noise in the system and help compensate for the sampling frequency that was limited by the speed of the CAN network of the vehicle. Unfortunately, time constraints didn't allow for the proper testing of the software and a decision was made to not include the code during the competition to ensure the driver's safety.</P></div>
   </div>
     
   <div><p><img src="LaunchTractionControl.PNG" width="991"></p></div>
