--- a/Projects/Strangers/index.html
+++ b/Projects/Strangers/index.html
@@ -99,7 +99,7 @@ Do the following if you're using your customized build of modernizr (http://www.
     <div id="LayoutDiv1">
 		<div class="Image"><p><img src="Screen 1.png" width="100%"></p></div>
         <div class="Paragraph">
-			<P>Strangers is an android application developed by me and three of my peers at a hackathon in Duke University, HackDuke. The aim of the project was to develop a fun ecosystem for people to chat and communicate with strangers while using APIs provided by Facebook, FireBase and IBM. Over 24 hours my team and I planned and designed the app to scan your recent posts on facebook and pair you with someone who has the opposite personality as you. The aim of the app was to help connect people from different backgrounds and help the community appreciate the difference in personalties.</P>
+			<P>Strangers is an android application developed by me and three of my peers at a hackathon in Duke University, HackDuke. The aim of the project was to develop a fun ecosystem for people to chat and communicate with strangers while using APIs provided by Facebook, FireBase and IBM. Over 24 hours my team and I planned and designed the app to scan your recent posts on Facebook and pair you with someone who has the opposite personality as you. The aim of the app was to help connect people from different backgrounds and help the community appreciate the difference in personalities.</P>
 		</div>
 	</div>
 
@@ -108,13 +108,13 @@ Do the following if you're using your customized build of modernizr (http://www.
   <div id="LayoutDiv2">
     <div id="NudgeMe" class="Image"><p><img src="Screen 2.jpg" width="100%"></p></div>
     <div class="Paragraph">
-      <P> While developing Strangers with my team I gained a lot of first hand experience and mentorship working with the Google android SDK and learning the basics of how to develop the front end of the application. The data we received from Facebook was packaged as a JSON file. Our app repackaged the file to better work with IBM's Bluemix servers. In Bluemix I learned how to code in node.js and interface with Watson. Watson was the computation engine responsible for analusing the data packets sent to bluemix and respond with a personality profile. The data was used to pair users who ere directed to a firebase script that allowed us to quickly set up a messenger feed between two users.</p></div>
+      <P> While developing Strangers with my team I gained a lot of firsthand experience and mentorship working with the Google android SDK and learning the basics of how to develop the front end of the application. The data we received from Facebook was packaged as a JSON file. Our app repackaged the file to better work with IBM's Bluemix servers. In Bluemix I learned how to code in node.js and interface with Watson. Watson was the computation engine responsible for analysing the data packets sent to Bluemix and respond with a personality profile. The data was used to pair users who were directed to a FireBase script that allowed us to quickly set up a messenger feed between two users.</p></div>
   </div>
   
   <div id="LayoutDiv2">
     <div class="Image"><p><img src="Project Strangers.jpg" width="100%"></p></div>
     <div class="Paragraph">
-      <P> Future plans for the application involved creating a more intuitive interface with improved branding. Furthermore we wanted to have the app passively block offensive content or anything that violated our terms of use. This social experiment would help us understand how well people will opposite personalties interact with each other and provide insight into potential problems or advantages. You can view our source code and androids app on the group's <a href="https://github.com/SNavleen/Stranger">Git</a></P></div>
+      <P>Future plans for the application involved creating a more intuitive interface with improved branding. Furthermore we wanted to have the app passively block offensive content or anything that violated our terms of use. This social experiment would help us understand how well people will opposite personalities interact with each other and provide insight into potential problems or advantages. You can view our source code and androids app on the group's <a href="https://github.com/SNavleen/Stranger">Git</a></P></div>
   </div>
 </div>
 <script type="text/javascript">
