--- a/Projects/F1/index.html
+++ b/Projects/F1/index.html
@@ -96,7 +96,7 @@ Do the following if you're using your customized build of modernizr (http://www.
   <h1>F1 in Schools </h1>
 
     <div id="LayoutDiv1">
-		<div class="Image" ><p><img src="Project F1.JPG"></p>
+		<div class="Image" ><p><img src="Project F1.jpg"></p>
 		</div>
         <div class="Paragraph">
 			<P>This  was the one of the most challenging competitions in terms of coordinating  resources between team members. I was a part of the only collaboration team in  the regional competition. This meant that students from different schools all  collaborated to work as a single team. This posed a challenge as unlike most  teams it was difficult for us to host regular meetings to communicate the  team&rsquo;s progress. This hurdle was overcome by dividing the work into 3 rolls.  These were manufacturing, marketing and outreach. The team agreed to  collaborate on the overall design of the F1 car as it was the most important  part of the competition.</P>
