--- a/Projects/FIRST/index.html
+++ b/Projects/FIRST/index.html
@@ -118,7 +118,7 @@ Do the following if you're using your customized build of modernizr (http://www.
     </div>
     <div class="Paragraph">
         <p>
-			The primary frame this year was built entirely out of sheet metal. This allowed the team to outsource a lot of the manufacturing. Our Laser cutter sponsor sable metals was able to deliver the parts in a fraction of the time it would normally take us to produce it. We saved further weight in the assembly by using rivets instead of bolts. This also prevented failure due to the bolts in the frame coming loose. <br>
+			The primary frame this year was built entirely out of sheet metal. This allowed the team to outsource a lot of the manufacturing. Our laser cutting sponsor sablemetals was able to deliver the parts in a fraction of the time it would normally take us to produce it. We saved further weight in the assembly by using rivets instead of bolts. This also prevented failure due to the bolts in the frame coming loose. <br>
 			For the shooter I decided to use a wooden fixed hood turret. The fixed hoot allowed there to be less moving parts and reducing the complexity of the turret. To vary the distance of the shot, the velocity of the ball was varied by controlling the speed of the motors. They were controlled through a PID feedback loop that allowed the flywheel to quickly get to speed.
         </p>
     </div>
@@ -169,7 +169,7 @@ Do the following if you're using your customized build of modernizr (http://www.
 			The green and red rollers were a part of the ball control mechanism that gripped onto a small section of the ball to prevent it from rolling away. Behind the Bosch we used a spring loaded Bosch kicker that is subject to 200lbs of force. This kicker is manipulated though a dog gearbox that takes advantage of the anti-drive back technology in DeWalt drills. <br>
 			During this particular year I learned a lot about how essential it is to pick the right material to build certain parts of the robot. Due to a lack of understand of stress, we used unnecessary amounts of box tubing to make the frame of the robot. This resulted in added weight that pushed the robot over the 120lb weight limit specified by the rules. <br>
 			I also found that it is important to look into the lifetime of every part and what maintenance work will be required. While working in the pits I found that the front rollers often needed to be replaced and cleaned. Furthermore the wheels that we used also needed to be changed every regional. Changing the wheels was extremely expensive and time consuming. <br>
-			This year the team again qualified for the world championships by winning the most prestigious award in the regional, the chairmens award. This award is given out to the team that has created the most influential presence in their community by raising awareness and interest for science and technology.
+			This year the team again qualified for the world championships by winning the most prestigious award in the regional, the chairmen's award. This award is given out to the team that has created the most influential presence in their community by raising awareness and interest for science and technology.
         </p>
     </div>
 </div>    
@@ -178,7 +178,7 @@ Do the following if you're using your customized build of modernizr (http://www.
     <div class="Image"><img src="2009robot.jpg"></div>
     <div class="Paragraph">
         <p>
-        	This was my first year in FIRST robotics. Competition. This particular competition truly captured by attention because of the size of the robots and the scale of the competition. At this point I could visualise robots performing real life tasks and assisting humans as opposed to being small toys designed to fight each other. As a rookie I quickly learned how to manufacture raw materials to specifications and learned the basics of robotic design. The seniors on my team became my mentors and I was able to quickly learn as well as contribute to the design of the robot. That year I was responsible for overseeing the manufacturing and maintenance of the drivetrain of the robot.
+        	This was my first year in FIRST Robotics Competition. This particular competition truly captured by attention because of the size of the robots and the scale of the competition. At this point I could visualise robots performing real life tasks and assisting humans as opposed to being small toys designed to fight each other. As a rookie I quickly learned how to manufacture raw materials to specifications and learned the basics of robotic design. The seniors on my team became my mentors and I was able to quickly learn as well as contribute to the design of the robot. That year I was responsible for overseeing the manufacturing and maintenance of the drivetrain of the robot.
         </p>
     </div>
     <div class="Image">
